# alan-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
alan_mcp/: __init__.py  langgraph_mcp_tutorial.py
docs/: example_config.json
docs/langgraph_docs/: MCP Integration.md
src/: client.py  host.py
src/alan_mcp/: client.py  host.py
